etc/tests/error/parser/missing-brace.ny
;; expect: check for missing ';' or unmatched brace
use std.core

if(true){
   print(1)
